Add parametrized types to HibernateFactory.lookupObjectByNamedQuery()